Added 'Important' label support

--- a/public/app/views/includes/workspace/workspace.left.html
+++ b/public/app/views/includes/workspace/workspace.left.html
@@ -120,9 +120,9 @@ $(function(){
 	</md-button>
   </div> -->
   <md-divider></md-divider>
-  <label>
+  <!-- <label>
     <input type="checkbox" ng-click="toggleJunk()">
-   Show Junk</label><br/>
+   Show Junk</label><br/> -->
   <p ng-hide="workspace == 'Loading...'">
     <!-- Other workspace information. -->
   </p>
