--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -75,7 +75,10 @@
           </div>
         </md-list-item>
       </md-list>
-      <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-click="delete_id=mediaAsset.id; delete_image()"><strong>
+      <md-button style="background-color: #D3D3D3;" ng-click="stored_id=mediaAsset.id; mark_as_important()"><strong>
+        Classify as Important
+      </strong></md-button>
+      <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-click="stored_id=mediaAsset.id; mark_as_junk()"><strong>
         Classify as Junk
       </strong></md-button>
     </div>
