--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -75,10 +75,18 @@
           </div>
         </md-list-item>
       </md-list>
-      <md-button style="background-color: #D3D3D3;" ng-click="stored_id=mediaAsset.id; mark_as_important()"><strong>
+      <md-subheader style="color: white; background-color: #4CAF50;"><b>Labels</b></md-subheader>
+      <md-list>
+        <md-list-item ng-repeat="label in mediaAsset.labels" class="md-2-line">
+          <div class="md-list-item-text">
+            <h4><b>{{ label }}</b></h4>
+          </div>
+        </md-list-item>
+      </md-list>
+      <md-button style="background-color: #D3D3D3;" ng-click="stored_id=mediaAsset.id; add_label('important')"><strong>
         Classify as Important
       </strong></md-button>
-      <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-click="stored_id=mediaAsset.id; mark_as_junk()"><strong>
+      <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-click="stored_id=mediaAsset.id; add_label('junk')"><strong>
         Classify as Junk
       </strong></md-button>
     </div>
