--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -107,7 +107,7 @@
           <md-button ng-click=toggleImportant()>
             <div layout="row" ng-if="showImportant">
               <p flex>
-                <i class="fa fa-fw fa-star-o"></i> Show All
+                <i class="fa fa-fw fa-picture-o"></i> Show All
               </p>
             </div>
             <div layout="row" ng-if="!showImportant">
