--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -83,7 +83,10 @@
           </div>
         </md-list-item>
       </md-list>
-      <md-button style="background-color: #D3D3D3;" ng-click="stored_id=mediaAsset.id; add_label('important')"><strong>
+      <md-button style="background-color: #D3D3D3;" ng-if="mediaAsset.labels.indexOf('important') >= 0" ng-click="stored_id=mediaAsset.id; remove_label('important')"><strong>
+        Remove 'Important' Classification
+      </strong></md-button>
+      <md-button style="background-color: #D3D3D3;" ng-if="mediaAsset.labels.indexOf('important') < 0" ng-click="stored_id=mediaAsset.id; add_label('important')"><strong>
         Classify as Important
       </strong></md-button>
       <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-click="stored_id=mediaAsset.id; add_label('junk')"><strong>
