--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -3,11 +3,11 @@
     <div class="md-toolbar-tools">
       <h2>Detection Review</h2>
       <span flex></span>
-      <md-button class="md-primary" ng-click="detection.endReview()">Save and Exit
+      <!-- <md-button class="md-primary" ng-click="detection.endReview()">Save and Exit
         <md-tooltip md-autohide>
           Submit current review and exit
         </md-tooltip>
-      </md-button>
+      </md-button> -->
       <md-button class="md-icon-button" aria-label="Cancel" ng-click="detection.detectDialogCancel()">
         <i class="fa fa-remove"></i>
         <md-tooltip md-autohide>
