--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -101,7 +101,8 @@
       </md-list>
 
       <!-- Each button checks whether or not the current mediaAsset is labelled junk/important and displays the correct information depending on the labels. -->
-      <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 1" ng-click="remove_label('important')"><strong>
+      <!-- TODO: UNCOMMENT FOLLOWING CODE WHEN MORE LABEL SUPPORT IS ADDED - VIRTUALLY USELESS AS IS -->
+      <!-- <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 1" ng-click="remove_label('important')"><strong>
         Remove Important Classification
       </strong></md-button>
       <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 0" ng-click="add_label('important')"><strong>
@@ -112,7 +113,7 @@
       </strong></md-button>
       <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-if="isJunk(mediaAsset.id, mediaAsset.labels) == 0" ng-click="add_label('junk')"><strong>
         Classify as Junk
-      </strong></md-button>
+      </strong></md-button> -->
     </div>
   </md-dialog-content>
 </md-dialog>
