Login complete besides server side

--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -162,8 +162,8 @@
     </md-menu-content>
   </md-menu>
 </div>
-<script>
+<!-- <script>
   $("#save_text_input").alphanum({
     allow: '-_:'
   });
-</script>
+</script> -->
