--- a/public/app/views/includes/workspace/upload/upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/upload.dialog.html
@@ -9,11 +9,6 @@
     </div>
   </md-toolbar>
   <md-dialog-content>
-    <div flex ng-if="upload.stage == 1" class="md-content">
-      <div layout="row" layout="column" layout-align="space-around" style="position: absolute;bottom:1%;height:2000px;width:100%;">
-        <md-progress-circular md-mode="indeterminate" md-diameter="100" style="position:fixed;bottom:50%" ></md-progress-circular>
-      </div>
-    </div>
 
     <div class="md-padding" ng-show="upload.images.length <= 0">
       No images selected. Please select some images to upload.
@@ -23,7 +18,7 @@
       <div class="md-padding" layout="row" layout-wrap>
         <md-card class="upload-card" ng-repeat="im in upload.images">
           <img ng-src="{{ im.imageSrc }}" class="md-card-image" />
-          <md-progress-linear md-mode="determinate" value="{{ im.progress }}"></md-progress-linear>
+          <md-progress-linear ng-if="upload.stage == 1" md-mode="determinate" value="{{ im.progress }}"></md-progress-linear>
           <md-card-actions layout="row" layout-align="end center">
             <h4>{{ im.name }}</h4>
             <md-button class="md-icon-button" aria-label="Remove" ng-click="upload.remove($index)" ng-if="upload.stage < 2">
