--- a/public/app/views/pages/workspace.html
+++ b/public/app/views/pages/workspace.html
@@ -1,4 +1,5 @@
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Scope One' rel='stylesheet'>
   <script type="text/javascript">window.addEventListener("dragover",function(e){
   e = e || event;
   e.preventDefault();
@@ -10,7 +11,7 @@ window.addEventListener("drop",function(e){
 </script>
 </head>
 
-<md-sidenav id="main-sidenav" layout="column" class="sidenav md-sidenav-left md-whiteframe-z3" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+<md-sidenav id="main-sidenav" style="font-family: 'Scope One'" layout="column" class="sidenav md-sidenav-left md-whiteframe-z3" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
   <div class="sidenav-header">
     <md-menu-bar class="main-menu md-whiteframe-z1">
       <md-menu>
@@ -40,7 +41,7 @@ window.addEventListener("drop",function(e){
           </md-menu-item>
           <md-divider></md-divider>
           <md-menu-item>
-            <md-button ng-click="upload.updateType()">
+            <md-button ng-click="logout()">
               Logout
             </md-button>
           </md-menu-item>
@@ -68,7 +69,7 @@ window.addEventListener("drop",function(e){
   </div>
   <ng-include src="'app/views/includes/workspace/workspace.left.html'"></ng-include>
 </md-sidenav>
-<div class="layout-column flex">
+<div class="layout-column flex" style="font-family: 'Scope One'">
   <md-toolbar layout="row" id="toolbar">
     <ng-include src="'app/views/includes/workspace/workspace.top.html'" flex></ng-include>
   </md-toolbar>
