--- a/public/app/views/pages/register.html
+++ b/public/app/views/pages/register.html
@@ -5,24 +5,9 @@
 	<meta charset="utf-8">
 </head>
 
-<!-- TODO: IMPLEMENT USER REGISTRATION -->
+<!-- TODO: DISCUSS WHAT INFORMATION WE WANT FOR USER REGISTRATION -->
 <md-sidenav id="main-sidenav" layout="column" class="sidenav md-sidenav-left md-whiteframe-z3" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-  <div class="sidenav-header">
-    <md-menu-bar class="main-menu md-whiteframe-z1">
-    </md-menu-bar>
-    <header id="logo">
-      <div class="logo">
-        <img src="assets/img/logo-ibeis.png" height="240" width="240" ng-click="toggleLogo()">
-      </div>
-    </header>
-    <md-divider></md-divider>
-		<div style="text-align: center; font-family: 'Scope One';">
-			<h1> Wildbook </h1>
-		</div>
-		<div style="font-family: 'Scope One';">
-			<p style="padding-left: 15px; padding-right: 15px"> Wildbook blends structured wildlife research with artificial intelligence, citizen science, and computer vision to speed population analysis and develop new insights to help fight extinction.  </p>
-		</div>
-  </div>
+	<ng-include src="'app/views/includes/entry/entry.left.html'"></ng-include>
 </md-sidenav>
 <div class="layout-column flex" style="background-color: #eee;">
   <md-toolbar layout="row" id="toolbar">
@@ -30,43 +15,45 @@
   </md-toolbar>
   <h1 style="font-family: 'Scope One'; text-align: center; color: rgb(76,175,80);"> <strong>Register</strong> </h1>
   <div>
-    <form class="form-horizontal">
+    <form class="form-horizontal" ng-submit="register()">
 			<div style="font-family: 'Scope One'; padding-bottom:20px" class="col-md-4 col-md-offset-4">
         <label for="email">E-mail Address</label>
         <div>
-          <input style="font-family: 'Scope One'" type="email" class="form-control login-input" id="registerEmail" placeholder="E-mail Address">
+          <input style="font-family: 'Scope One'" type="email" class="form-control login-input" ng-model="email" id="registerEmail" placeholder="E-mail Address" required>
         </div>
 			</div>
       <div style="font-family: 'Scope One'; padding-bottom:20px; padding-top:20px;" class="col-md-4 col-md-offset-4">
         <label for="confirmEmail">Confirm E-mail Address</label>
         <div>
-          <input style="font-family: 'Scope One'" type="email" class="form-control login-input" id="confirmEmail" placeholder="E-mail Address">
+          <input style="font-family: 'Scope One'" type="email" class="form-control login-input" ng-model="confirmEmail" id="confirmEmail" placeholder="E-mail Address" required>
         </div>
+				<div ng-if="confirmEmail != email" style="color: red"> E-mails don't match </div>
 			</div>
 			<div style="padding-top: 20px; padding-bottom: 20px" class="col-md-4 col-md-offset-4">
-        <label for="registerPass"> Password</label>
+        <label for="registerPass"> Password </label>
 				<div>
-					<input style="font-family: 'Scope One'" type="password" class="form-control login-input" id="registerPass" name = "registerPass" placeholder="Password">
+					<input style="font-family: 'Scope One'" type="password" class="form-control login-input" ng-model="pass" id="registerPass" name = "registerPass" placeholder="Password" required>
 				</div>
 			</div>
       <div style="font-family: 'Scope One'; padding-bottom:20px; padding-top:20px;" class="col-md-4 col-md-offset-4">
         <label for="registerPassConfirm">Confirm Password</label>
         <div>
-          <input style="font-family: 'Scope One'" type="password" class="form-control login-input" id="registerPassConfirm" placeholder="Password">
+          <input style="font-family: 'Scope One'" type="password" class="form-control login-input" ng-model="confirmPass" id="registerPassConfirm" placeholder="Password" required>
         </div>
+				<div ng-if="confirmPass != pass" style="color: red"> Passwords don't match </div>
 			</div>
       <div style="font-family: 'Scope One'; padding-bottom:20px; padding-top:20px;" class="col-md-4 col-md-offset-4">
         <label for="registerOrganization">Organization</label>
         <div>
-          <input style="font-family: 'Scope One'" type="email" class="form-control login-input" ng-model="organization" id="organization" placeholder="Organization">
+          <input style="font-family: 'Scope One'" class="form-control login-input" ng-model="organization" id="organization" placeholder="Organization">
         </div>
 			</div>
 			<div style="padding-top: 20px">
 				<div class="col-md-4 col-md-offset-4" style="text-align: center">
-					<a href="http://localhost:7070/#!/workspace" class="btn btn-success .btn-lg" style="font-family: 'Scope One'" layout-align="center"> Create Account </a>
+					<button type="submit" class="btn btn-success .btn-lg" style="font-family: 'Scope One'" layout-align="center"> Create Account </button>
 				</div>
-        <div class="col-md-4 col-md-offset-4" style="text-align: center">
-					<a href="http://localhost:7070/#!/login" style="color rgb(76,175,80); text-align: right"> Already have an account? </a>
+        <div class="col-md-4 col-md-offset-4" style="padding-top: 15px; text-align: center">
+					<a href="#!/login" style="color rgb(76,175,80); text-align: right"> Already have an account? </a>
 				</div>
 			</div>
 		</form>
