Added back label support code

--- a/public/app/views/includes/workspace/workspace.left.html
+++ b/public/app/views/includes/workspace/workspace.left.html
@@ -120,8 +120,7 @@ $(function(){
 	</md-button>
   </div> -->
   <md-divider></md-divider>
-  <!-- TODO: UNCOMMENT FOLLOWING CODE WHEN MORE LABEL SuPPORT ADDED -->
-  <!-- <div ng-if="showJunk" style="margin: auto">
+  <div ng-if="showJunk" style="margin: auto">
     <p flex>
       <i class="fa fa-fw fa-trash-o fa-5x"></i>
       <md-tooltip md-autohide> Showing Junk </md-tooltip>
@@ -138,7 +137,7 @@ $(function(){
       <i class="fa fa-fw fa-picture-o fa-5x"></i>
       <md-tooltip md-autohide> Showing All </md-tooltip>
     </p>
-  </div> -->
+  </div>
   <p ng-hide="workspace == 'Loading...'">
     <!-- Other workspace information. -->
   </p>
