--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -76,8 +76,7 @@
     </md-button>
   </div>
 
-  <!-- TODO: UNCOMMENT FOLLOWING DIV WHEN MORE LABEL SUPPORT IS ADDED - VIRTUALLY USELESS AS OF NOW -->
-  <!-- <div>
+  <div>
     <md-menu md-position-mode="target-right target">
       <md-button class="md-icon-button" aria-label="Labels" ng-click="$mdMenu.open($event)">
         <i class="fa fa-tags"></i>
@@ -116,7 +115,7 @@
           </md-button>
       </md-menu-content>
     </md-menu>
-  </div> -->
+  </div>
 
 
 
