--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -84,9 +84,7 @@
           <p ng-if="detectionStatus() == -1"> There was an error when running detection on this </p>
         </md-list-item>
       </md-list>
-
-      <!-- TODO: UNCOMMENT FOLLOWING CODE WHEN MORE LABEL SUPPORT IS ADDED - UNDERWHELMING AS IS -->
-      <!-- <md-subheader style="color: white; background-color: #4CAF50;"><b>Labels</b></md-subheader>
+      <md-subheader style="color: white; background-color: #4CAF50;"><b>Labels</b></md-subheader>
       <md-list>
         <div>
           <md-list-item class="md-2-line">
@@ -100,11 +98,10 @@
             </div>
           </md-list-item>
         </div>
-      </md-list> -->
+      </md-list>
 
       <!-- Each button checks whether or not the current mediaAsset is labelled junk/important and displays the correct information depending on the labels. -->
-
-      <!-- <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 1" ng-click="remove_label('important')"><strong>
+      <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 1" ng-click="remove_label('important')"><strong>
         Remove Important Classification
       </strong></md-button>
       <md-button style="background-color: #D3D3D3;" ng-if="isImportant(mediaAsset.id, mediaAsset.labels) == 0" ng-click="add_label('important')"><strong>
@@ -115,7 +112,7 @@
       </strong></md-button>
       <md-button style="background-color: #D3D3D3;" class="dltbtn" ng-if="isJunk(mediaAsset.id, mediaAsset.labels) == 0" ng-click="add_label('junk')"><strong>
         Classify as Junk
-      </strong></md-button> -->
+      </strong></md-button>
     </div>
   </md-dialog-content>
 </md-dialog>
