Added ability to review detection directly from table view

--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -1,4 +1,4 @@
-<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog" ng-cloak>
+<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog"  >
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Detection Review</h2>
@@ -30,7 +30,7 @@
 
     <!-- Wraps the Detection Review from IA Server in a div for formatting purposes -->
     <div style="padding-left: 10px;">
-      <div style="#padding-left: 25cm;" class="ibeis-div" id="detection-review"></div>
+      <div style="padding-left: 10px;padding-right: 10px" class="ibeis-div" id="detection-review"></div>
     </div>
 	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
   <div id="past-detections" layout="row" layout-sm="column" layout-align="center">
