--- a/public/app/views/includes/workspace/identification.review.html
+++ b/public/app/views/includes/workspace/identification.review.html
@@ -1,4 +1,4 @@
-<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog" ng-cloak>
+<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog"  >
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Identification Review</h2>
