--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -1,4 +1,4 @@
-<md-dialog id="image-info" aria-label="imageInfo" ng-cloak>
+<md-dialog id="image-info" aria-label="imageInfo"  >
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Image Information: <em>{{ mediaAsset.id }}</em></h2>
@@ -79,7 +79,7 @@
       <md-list>
         <md-list-item>
           <p ng-if="detectionStatus() == 0"> Detection not run </p>
-          <p ng-click="detection.setDetectionStoredId(mediaAsset.id);detection.detectionReviewFromImage($event)" ng-if="detectionStatus() == 1"> Detection awaiting review </p>
+          <md-button ng-click="detection.setDetectionStoredId(mediaAssest.id);detection.detectionReviewFromImage($event)" ng-if="detectionStatus() == 1"> Detection awaiting review </md-button>
           <p ng-if="detectionStatus() == 2"> Detection review complete </p>
           <p ng-if="detectionStatus() == -1"> There was an error when running detection </p>
         </md-list-item>
