--- a/public/app/views/includes/workspace/upload/completed_upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/completed_upload.dialog.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="md-dialog-content">
-        <p>Your upload has completed successfully! You have a few options regarding how you would where you would like these photos organized.</p>
+        <p>Your upload has completed successfully! You have a few options regarding where you would like these photos organized.</p>
         <md-input-container>
           <label>Upload Images To...</label>
           <md-select ng-model="upload.uploadSetDialog.addToOption">
